Update WhatsApp share URL with live Vercel link and remove auto-open

--- a/public/form.html
+++ b/public/form.html
@@ -103,7 +103,7 @@
                 shareCount++;
                 shareCountDisplay.textContent = shareCount;
                 shareCountInput.value = shareCount;
-                window.open('https://api.whatsapp.com/send?text=Join%20the%20Web%20Tech%20Community%20for%20Girls!%20https://your-vercel-app.vercel.app', '_blank');
+                window.open('https://api.whatsapp.com/send?text=Join%20the%20Web%20Tech%20Community%20for%20Girls!%20https://web-tech-girls-5jczuyord-vamsi-krishnas-projects-fb83c1fb.vercel.app', '_blank');
                 if (shareCount === 5) {
                     submitButton.disabled = false;
                 }
@@ -123,7 +123,6 @@
                 document.getElementById('submitMessage').classList.remove('hidden');
             }
         });
-        window.open('https://api.whatsapp.com/send?text=Join%20the%20Web%20Tech%20Community%20for%20Girls!%20https://web-tech-girls.vercel.app', '_blank');
     </script>
 </body>
 </html>
